# jointLimitsTsidTest

./: CMakeLists.txt  README.md
cmake/: FindPIN.cmake  FindTSID.cmake
include/: tsid-controller.hpp
plot/: acc.sh  log.csv  plot.sh  pos.sh  tau.sh  vel.sh
src/: test-lim.cpp
urdf/: talos_laas.srdf  talos_simplified.urdf
